--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Hi, I am <strong>Samanta Krasteva</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">HR Operational Specialist</p>
-            <img src="img/samanta.jfif" alt="a picture of Iustin" class="intro__img">
+            <img src="img/samanta.jfif" alt="a picture of Samanta" class="intro__img">
             <a href="files/Samanta_CV.pdf" download="Samanta_CV.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download CV</a>
         </section>
         
@@ -76,7 +76,7 @@
                <h3>Some words about me</h3>
                <p>I am curious. I like to be in continous learning in any topic.</p>
                <h3>Languages</h3>
-               <p>Bulgarian (mother tongue), German (C1 certificate), English, Russish (A2), Romanian (A2)</p>
+               <p>Bulgarian (mother tongue), German (C1 certificate), English (C1), Russian (A2), Romanian (A2)</p>
                <h3>Hobbies</h3>
                <p>Duolingo, Cyber Security, Ayurveda, Piano, Philosophy, Trading</p>
                <h3>Certifications</h3>
@@ -84,7 +84,7 @@
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-UMFFFBJJHK.png" target="_blank" rel="noopener noreferrer">Introduction to Cyber Security (09.2021)</a></p>
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-75ODP6NEPW.png"  target="_blank" rel="noopener noreferrer">Jr. Penetration Tester (02.2022)</a></p>
                <p><a href="files/Englisch.pdf"  target="_blank" rel="noopener noreferrer">English certificate (2020)</a></p>
-               <p><a href="files/C1_Sprachdiplom+Schulzeugnisse.pdf"  target="_blank" rel="noopener noreferrer">German C1 certificate (05.2017) </a> </p>
+               <p><a href="files/C1_Sprachdiplom.pdf"  target="_blank" rel="noopener noreferrer">German C1 certificate (05.2017) </a> </p>
                <h3>Publication</h3>
                <p><a href="https://www.weiterbildungsinitiative.de/publikationen/detail/sozialberufliche-anerkennung-von-kindheitspaedagoginnen-und-kindheitspaedagogen" target="_blank" rel="noopener noreferrer">WiFF Arbeitspapiere Nr.7 (2022)</a></p>
            </div>
