--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
            
            <div class="about-me__body">
                <h3>Some words about me</h3>
-               <p>I am curious. I like to be in continous learning in any topic.</p>
-               <h3>Languages</h3>
+               <p>I am deeply passionate about the intersection of humanities, entrepreneurship, and technology, and how they can work together to create positive change in the world. Through my experiences, I have come to understand that resilience, education, and change are ongoing processes that require patience and dedication, rather than instant gratification.
+                  With a strong commitment to integrity, passion, and loyalty, I approach every task with a focus on achieving success. I firmly believe that effective leadership, coupled with the use of tools such as SMART goals, SWOT analysis, and strategic planning, can help to ensure success. By staying disciplined and focused, I am confident that any goal can be accomplished.<h3>Languages</h3>
                <p>Bulgarian (mother tongue), German (C1 certificate), English (C1), Russian (A2), Romanian (A2)</p>
                <h3>Hobbies</h3>
                <p>Duolingo, Cyber Security, Ayurveda, Piano, Philosophy, Trading</p>
