--- a/index.html
+++ b/index.html
@@ -73,9 +73,16 @@
            <p class="section__subtitle section__subtitle--about">HR Operational Specialist in Zug, Switzerland</p>
            
            <div class="about-me__body">
-               <h3>Some words about me</h3>
-               <p>I am deeply passionate about the intersection of humanities, entrepreneurship, and technology, and how they can work together to create positive change in the world. Through my experiences, I have come to understand that resilience, education, and change are ongoing processes that require patience and dedication, rather than instant gratification.
-                  With a strong commitment to integrity, passion, and loyalty, I approach every task with a focus on achieving success. I firmly believe that effective leadership, coupled with the use of tools such as SMART goals, SWOT analysis, and strategic planning, can help to ensure success. By staying disciplined and focused, I am confident that any goal can be accomplished.<h3>Languages</h3>
+               <h3>Personal coviction</h3>
+               <p>My personal and professional experiences have taught me that achieving 
+                  resilience, education, and change requires unwavering dedication and 
+                  an emphasis on long-term goals, rather than instant gratification.
+                  My approach to achieving success is rooted in a strong sense of integrity, 
+                  passion and loyalty, and I utilize various tools, including effective 
+                  leadership, SMART goals, SWOT analysis, and strategic planning, to drive outcomes.
+                  By remaining disciplined and focused, I am confident in my ability to accomplish 
+                  any goal and make a meaningful impact in the world.</p>
+               <h3>Languages</h3>
                <p>Bulgarian (mother tongue), German (C1 certificate), English (C1), Russian (A2), Romanian (A2)</p>
                <h3>Hobbies</h3>
                <p>Duolingo, Cyber Security, Ayurveda, Piano, Philosophy, Trading</p>
