--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
                <h3>Hobbies</h3>
                <p>Duolingo, Cyber Security, Ayurveda, Piano, Philosophy, Trading</p>
                <h3>Certifications</h3>
-               <p><a href="files/University Teaching.pdf" target="_blank" rel="noopener noreferrer">University Teaching (2021)</a></p>
-               <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-UMFFFBJJHK.png" target="_blank" rel="noopener noreferrer">Introduction to Cyber Security (09.2021)</a></p>
+               <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-E6IFOS2DXJ.png"  target="_blank" rel="noopener noreferrer">CompTIA Pentest+ (03.2022)</a></p>
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-75ODP6NEPW.png"  target="_blank" rel="noopener noreferrer">Jr. Penetration Tester (02.2022)</a></p>
+               <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-UMFFFBJJHK.png" target="_blank" rel="noopener noreferrer">Introduction to Cyber Security (09.2021)</a></p>
+               <p><a href="files/University Teaching.pdf" target="_blank" rel="noopener noreferrer">University Teaching (2021)</a></p>
                <p><a href="files/Englisch.pdf"  target="_blank" rel="noopener noreferrer">English certificate (2020)</a></p>
                <p><a href="files/C1_Sprachdiplom.pdf"  target="_blank" rel="noopener noreferrer">German C1 certificate (05.2017) </a> </p>
                <h3>Publication</h3>
