--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 </ul>
             </nav>
         </header>
-        <button onclick="window.scrollTo(0,0)>To Top</button>
+         <form>
+             <input type="BUTTON" value="Back to top of page" onclick="window.location.href='#home'">
+         </form>
         
         <!-- Introduction -->
 
@@ -83,20 +85,17 @@
                    and continuous professional development in the pursuit of success. However, 
                    I have learned that true fulfillment and meaningful progress are not hasty 
                    endeavors but rather require steadfast commitment to long-term objectives.
-                   By embodying these virtues, I strive to make ethical decisions. Furthermore, I employ 
-                   a repertoire of strategic tools and methodologies to optimize my effectiveness. These include 
+                   By embodying these virtues, I strive to make ethical decisions. Grounded in principles 
+                   of integrity and fueled by passion, I leverage strategic tools 
+                   to navigate challenges and seize opportunities. These include 
                    refined communication skills, the formulation of SMART goals to ensure clarity and measurability, 
                    SWOT analysis to identify areas of strength, weakness, opportunity, and threat, 
                    and strategic planning to chart a course towards desired outcomes.
                    The key to success lies in disciplined perseverance and unwavering focus. 
                    By remaining resolute in the face of challenges and setbacks, I cultivate 
-                   the determination necessary to achieve my objectives. With each step forward, 
-                   I hold steadfast confidence in my ability to make a significant impact and create meaningful change.
-                   In summary, my approach to personal and professional growth is underscored by the wisdom 
-                   that success is not a fleeting pursuit but a journey of dedication and fortitude. 
-                   Grounded in principles of integrity and fueled by passion, I leverage strategic tools 
-                   to navigate challenges and seize opportunities. Through disciplined commitment and unwavering focus, 
-                   I believe in my capacity to transcend limitations and make a lasting, meaningful contribution to the world.</p>
+                   the determination necessary to achieve our objectives. 
+                   In a nutshell, through disciplined commitment and unwavering focus, 
+                   I believe in my capacity to transcend limitations.</p>
                <h3>Languages</h3>
                <p>German (C1), English (C1), Romanian (A2), Russian (A1), Bulgarian (C2)</p>
                <h3>Hobbies</h3>
