--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                 </ul>
             </nav>
         </header>
-         <form>
-             <input type="BUTTON" value="Back to top of page" onclick="window.location.href='#home'">
-         </form>
+         <a href="#top"> scroll to top </a>
         
         <!-- Introduction -->
 
