--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
         </header>
-         <a href="#top"> scroll to top </a>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> 
         
         <!-- Introduction -->
 
