--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="services">
                 <div class="service">
                     <h3>Soft Skills</h3>
-                    <p>Integrity, Teamwork, Adaptability, Time Management, Problem-solving, Organization, Effective communication skills</p>
+                    <p>Integrity, Troubleshooting, Brainstorming, Adaptability, Time Management, Problem-solving, Resourcefulness, Collaborative</p>
                 </div> <!-- / service -->
             <div class="service">
                     <h3>Hard skills</h3>
@@ -57,7 +57,7 @@
                 </div> <!-- / service -->
             <div class="service">
                     <h3>Tools</h3>
-                    <p>Tableau, Microsoft Office, Jira, OpenProject, Slack, BurpSuite, Metasploit</p>
+                    <p>Tableau, Microsoft Office, Jira, OpenProject, Zoom, Slack, BurpSuite, Metasploit</p>
                 </div> <!-- / service -->
             </div> <!-- / services -->
             <div class="service">
@@ -205,12 +205,7 @@
                 </li>                
             </ul>
         </footer>               
-        <script src="js/index.js"></script>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-<div style="background-color:black;color:white;padding:30px">Scroll Down</div>
-<div style="background-color:lightgrey;padding:30px 30px 2500px">This example demonstrates how to create a "scroll to top" button that becomes visible 
-  <strong>when the user starts to scroll the page</strong>.</div>
 
 <script>
 // Get the button
