--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="Samanta Krasteva Portfolio" loading="lazy">
             </div>
-            <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" onclick="toggleMenu()">
+             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
             </button>
             <nav class="nav">
@@ -169,30 +169,8 @@
             <p>&copy; 2024 Samanta Krasteva. All rights reserved.</p>
         </footer>
 
-        <!-- Back to Top Button -->
-        <button class="back-to-top" onclick="scrollToTop()">↑</button>
-
         <!-- JavaScript -->
-        <script src="js/main.js"></script>
+        <script src="index.js"></script>
 
-        <script>
-            // Menu Toggle Function
-            function toggleMenu() {
-                const nav = document.querySelector('.nav');
-                const toggleButton = document.querySelector('.nav-toggle');
-                const isExpanded = toggleButton.getAttribute('aria-expanded') === 'true';
-                
-                toggleButton.setAttribute('aria-expanded', !isExpanded);
-                nav.classList.toggle('nav--open', !isExpanded);
-            }
-
-            // Back to Top Button Function
-            function scrollToTop() {
-                window.scrollTo({
-                    top: 0,
-                    behavior: 'smooth'
-                });
-            }
-        </script>
     </body>
 </html>
