--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </h1>
             <p class="section__subtitle section__subtitle--intro">IT Business Analyst</p>
             <img src="img/samanta.jfif" alt="a picture of Samanta" class="intro__img" loading="lazy">
-            <a href="files/Samanta_CV.pdf" download="Samanta_CV-6.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download CV</a>
+            <a href="files/Samanta_CV-6.pdf" download="Samanta's Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download Resume</a>
         </section>
         
         <!-- Skills Section -->
