--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
             <div class="about-me__body">
                 <h3>IT Business Analyst<br>GLOBOGATE concept AG, Zug, Switzerland</h3>
                 <h4>11.2021 - Present</h4>
-                <p> IT Business Analyst | Finance Team | June 2025 – Present
+                <p> IT Business Analyst | Finance Team | June 2025 – Present</p>
                     Finance Team
                         - Monthly Financial Reporting, Operational OKR Dashboard
                         - Revenue/ Cost and Profitability Forecast
                         - Digitalization Initiatives & Product Integration
-                    IT Business Analyst | IT Department | April 2023 – May 2025
+                <p> IT Business Analyst | IT Department | April 2023 – May 2025</p>
                     IT Department
                         - Developed and launched a custom ERP system, <strong>saving up to CHF 1M</strong>
                         - Data Preparation/ Transformation and Visualization
                         - Google Workspace/ Google Cloud Product Owner
                         - Release Planning and Testing of multiple fit-for-purpose applications with ~180 active users
                         - Tableau Product Owner
-                    Operations Specialist | November 2021 – March 2023
+                 <p> Operations Specialist | November 2021 – March 2023</p>
                         - Sped up document processing by 5×
                         - Train new hires and ensure procedural compliance
                         - Employee performance evaluation
