--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
                 <h3>IT Business Analyst<br>GLOBOGATE concept AG, Zug, Switzerland</h3>
                 <h4>11.2021 - Present</h4>
                 <p> IT Business Analyst | Finance Team | June 2025 – Present</p>
-                    Finance Team
-                        - Monthly Financial Reporting, Operational OKR Dashboard
-                        - Revenue/ Cost and Profitability Forecast
-                        - Digitalization Initiatives & Product Integration
+                    Finance Team <br>
+                        - Monthly Financial Reporting, Operational OKR Dashboard <br>
+                        - Revenue/ Cost and Profitability Forecast <br>
+                        - Digitalization Initiatives & Product Integration <br>
                 <p> IT Business Analyst | IT Department | April 2023 – May 2025</p>
-                    IT Department
-                        - Developed and launched a custom ERP system, <strong>saving up to CHF 1M</strong>
-                        - Data Preparation/ Transformation and Visualization
-                        - Google Workspace/ Google Cloud Product Owner
-                        - Release Planning and Testing of multiple fit-for-purpose applications with ~180 active users
-                        - Tableau Product Owner
+                    IT Department <br>
+                        - Developed and launched a custom ERP system, <strong>saving up to CHF 1M</strong> <br>
+                        - Data Preparation/ Transformation and Visualization <br>
+                        - Google Workspace/ Google Cloud Product Owner <br>
+                        - Release Planning and Testing of multiple fit-for-purpose applications with ~180 active users <br>
+                        - Tableau Product Owner <br>
                  <p> Operations Specialist | November 2021 – March 2023</p>
-                        - Sped up document processing by 5×
-                        - Train new hires and ensure procedural compliance
-                        - Employee performance evaluation
+                        - Sped up document processing by 5× <br>
+                        - Train new hires and ensure procedural compliance <br>
+                        - Employee performance evaluation <br>
                 </p>                
                 <h3>Technical Recruiter<br>Fidor Bank AG, Munich, Germany</h3>
                 <h4>08.2021 - 09.2021</h4>
