--- a/index.html
+++ b/index.html
@@ -143,37 +143,35 @@
                 <h3>IT Business Analyst<br>GLOBOGATE concept AG, Zug, Switzerland</h3>
                 <h4>11.2021 - Present</h4>
                 <p> IT Business Analyst | Finance Team | June 2025 – Present</p>
-                    Finance Team <br>
                         - Monthly Financial Reporting, Operational OKR Dashboard <br>
                         - Revenue/ Cost and Profitability Forecast <br>
                         - Digitalization Initiatives & Product Integration <br>
                 <p> IT Business Analyst | IT Department | April 2023 – May 2025</p>
-                    IT Department <br>
                         - Developed and launched a custom ERP system, <strong>saving up to CHF 1M</strong> <br>
                         - Data Preparation/ Transformation and Visualization <br>
                         - Google Workspace/ Google Cloud Product Owner <br>
                         - Release Planning and Testing of multiple fit-for-purpose applications with ~180 active users <br>
                         - Tableau Product Owner <br>
                  <p> Operations Specialist | November 2021 – March 2023</p>
-                        - Sped up document processing by 5× <br>
-                        - Train new hires and ensure procedural compliance <br>
+                        - Accelerated document processing efficiency by 500% <br>
+                        - Mentored new hires and enforced adherence to procedural standards <br>
                         - Employee performance evaluation <br>
                 </p>                
                 <h3>Technical Recruiter<br>Fidor Bank AG, Munich, Germany</h3>
                 <h4>08.2021 - 09.2021</h4>
-                <p> Created and posted job ads, managed candidate communication, scheduled interviews, and supervised the entire interview process</p>
+                <p> - Created and posted job ads, managed candidate communication, scheduled interviews, and supervised the entire interview process</p>
 
                 <h3>Graduate Research Assistant<br>German Youth Institute, Munich, Germany</h3>
                 <h4>12.2020 - 07.2021</h4>
-                <p> Performed qualitative and quantitative data analysis<br>
-                    Publications: <br>
+                <p> - Performed qualitative and quantitative data analysis<br>
+                    - Publications: <br>
                         WiFF Arbeitspapiere Nr. 7 (2022) – Co-author<br>
                         WiFF Arbeitspapiere Nr. 6 (2021) – Contributor<br>
                 </p>
 
                 <h3>Event & Project Management<br>IHK Munich</h3>
                 <h4>10.2019 - 10.2020</h4>
-                <p> Organized small-scale projects and events focused on vocational training</p>
+                <p> - Organized small-scale projects and events focused on vocational training</p>
 
                 <h3>Junior Consultant<br>MaRe IT Consulting GmbH, Munich, Germany</h3>
                 <h4>04.2019 - 09.2019</h4>
