--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-E6IFOS2DXJ.png"  target="_blank" rel="noopener noreferrer">CompTIA Pentest+ (03.2023)</a></p>
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-75ODP6NEPW.png"  target="_blank" rel="noopener noreferrer">Jr. Penetration Tester (02.2023)</a></p>
                <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-UMFFFBJJHK.png" target="_blank" rel="noopener noreferrer">Introduction to Cyber Security (2022)</a></p>
-               <p><a href="files/University Teaching.pdf" target="_blank" rel="noopener noreferrer">Academic Tutor (2021)</a></p>
-               <p><a href="files/Englisch.pdf"  target="_blank" rel="noopener noreferrer">English C1</a></p>
+               <p><a href="files/Academic_Tutor.pdf" target="_blank" rel="noopener noreferrer">Academic Tutor (2021)</a></p>
+               <p><a href="files/English_uni.pdf"  target="_blank" rel="noopener noreferrer">English C1</a></p>
                <p><a href="files/HR4You.pdf"  target="_blank" rel="noopener noreferrer">HR4You Certificate (2019)</a></p>
-               <p><a href="files/C1_Sprachdiplom.pdf"  target="_blank" rel="noopener noreferrer">German C1 Certificate (2017) </a> </p>
+               <p><a href="files/C1_Deutsches_Sprachdiplom.pdf"  target="_blank" rel="noopener noreferrer">German C1 Certificate (2017) </a> </p>
                <h3>Publications</h3>
                <p><a href="https://www.weiterbildungsinitiative.de/publikationen/detail/sozialberufliche-anerkennung-von-kindheitspaedagoginnen-und-kindheitspaedagogen" target="_blank" rel="noopener noreferrer">WiFF Arbeitspapiere Nr. 7 (2022) – Co-author</a></p>
                <p><a href="https://www.weiterbildungsinitiative.de/publikationen/detail/einstellungsvoraussetzungen-fuer-lehrkraefte-an-fachschulen-fuer-sozialpaedagogik" target="_blank" rel="noopener noreferrer">WiFF Arbeitspapiere Nr. 6 (2021) – Contributor</a></p>
