--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Samanta Krasteva - Portfolio of an IT Business Analyst specializing in data analysis, project management, and cybersecurity. Discover her skills, experience, and certifications.">
+        <meta name="description" content="Samanta Krasteva - Portfolio of an Business Analyst specializing in data analysis, project management, and cybersecurity. Discover her skills, experience, and certifications.">
 
         <title>Samanta's Portfolio</title>
 
@@ -33,7 +33,7 @@
           "@context": "https://schema.org",
           "@type": "Person",
           "name": "Samanta Krasteva",
-          "jobTitle": "IT Business Analyst",
+          "jobTitle": "Business Analyst",
           "address": {
             "@type": "PostalAddress",
             "addressLocality": "Zug",
@@ -69,7 +69,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Samanta Krasteva</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">IT Business Analyst</p>
+            <p class="section__subtitle section__subtitle--intro">Business Analyst</p>
             <img src="img/samanta.jfif" alt="a picture of Samanta" class="intro__img" loading="lazy">
             <a href="files/CV_Samanta.pdf" download="Samanta's Resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download Resume</a>
         </section>
@@ -104,7 +104,7 @@
             <p class="section__subtitle section__subtitle--about">IT Business Analyst in Zurich, Switzerland</p>        
            <div class="about-me__body">
                <h3>About me</h3>
-               <p>Results-driven IT Business Analyst with experience in financial reporting, ERP system development, and digital transformation initiatives. 
+               <p>Results-driven Business Analyst with experience in financial reporting, ERP system development, and digital transformation initiatives. 
                    Skilled in data analysis, stakeholder collaboration, and driving process improvements to deliver cost savings and operational efficiency.</p>
                <h3>Languages</h3>
                <p>German (C1), English (C1), Romanian (A2), Russian (A1), Bulgarian (C2)</p>
@@ -140,13 +140,13 @@
 
             <p class="section__subtitle section__subtitle--work">My work experience</p>
             <div class="about-me__body">
-                <h3>IT Business Analyst<br>GLOBOGATE concept AG, Zug, Switzerland</h3>
+                <h3>Business Analyst<br>GLOBOGATE concept AG, Zug, Switzerland</h3>
                 <h4>11.2021 - Present</h4>
-                <p> IT Business Analyst | Finance Team | June 2025 – Present</p>
+                <p>Business Analyst | Finance Team | June 2025 – Present</p>
                         - Monthly Financial Reporting, Operational OKR Dashboard <br>
                         - Revenue/ Cost and Profitability Forecast <br>
                         - Digitalization Initiatives & Product Integration <br>
-                <p> IT Business Analyst | IT Department | April 2023 – May 2025</p>
+                <p>Business Analyst | IT Department | April 2023 – May 2025</p>
                         - Developed and launched a custom ERP system, <strong>saving up to CHF 1M</strong> <br>
                         - Data Preparation/ Transformation and Visualization <br>
                         - Google Workspace/ Google Cloud Product Owner <br>
