--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- About Me Section -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">IT Business Analyst in Zurich, Switzerland</p>        
+            <p class="section__subtitle section__subtitle--about">Business Analyst in Zurich, Switzerland</p>        
            <div class="about-me__body">
                <h3>About me</h3>
                <p>Results-driven Business Analyst with experience in financial reporting, ERP system development, and digital transformation initiatives. 
